[package]
name = "swtcp6_pmd3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "swtcp6_pmd3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["abi3-py39"] }
pyo3-log = "0.12.4"
rand = "0.9.1"
smoltcp = "0.12.0"
